# avsocks

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  avsocks.h  avsocks_server.cpp  avsocks_server.h  config.ini  gfwlist.go  gfwlist.txt  httpproxy.go  main.cpp  main.go  socks5_proxy.cpp  socks5_proxy.h
client/: config.ini  main.go
handler/: client.go  common.go  handler.go  server.go
server/: config.ini  main.go
