project(avsocks)

if(WIN32)
else()
  add_definitions(-std=c++11)
endif()

cmake_minimum_required(VERSION 2.8)
set(Boost_ADDITIONAL_VERSIONS 1.57)
set(Boost_USE_STATIC_LIBS ON)
find_package(Threads)
find_package(Boost COMPONENTS system coroutine context)
include_directories(${Boost_INCLUDE_DIRS})
link_directories(${Boost_LIBRARY_DIRS})
set(AVSOCKS_SRC main.cpp avsocks.h avsocks_server.cpp avsocks_server.h socks5_proxy.cpp socks5_proxy.h)
add_executable(avsocks ${AVSOCKS_SRC})
target_link_libraries(avsocks ${Boost_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})